[gd_scene load_steps=4 format=3 uid="uid://cirbyi3pmn0kj"]

[ext_resource type="Script" path="res://Scripts/start_game.gd" id="1_r0l32"]
[ext_resource type="Texture2D" uid="uid://c34ynbm7f1x7e" path="res://Assets/Logo.jpg" id="2_vgkkp"]
[ext_resource type="Texture2D" uid="uid://e58uswisb3aj" path="res://Assets/Comic.jpg" id="3_kvfso"]

[node name="StartGame" type="Node"]
script = ExtResource("1_r0l32")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(927, 521)
texture = ExtResource("2_vgkkp")

[node name="StartButton" type="Button" parent="."]
offset_left = 959.0
offset_top = 733.0
offset_right = 1294.0
offset_bottom = 873.0
text = "START GAME"

[node name="Comic" type="Sprite2D" parent="."]
visible = false
position = Vector2(927, 521)
scale = Vector2(1.73889, 1.77456)
texture = ExtResource("3_kvfso")

[node name="ComicButton" type="TextureButton" parent="."]
offset_left = -9.0
offset_top = -37.0
offset_right = 1946.0
offset_bottom = 1087.0
texture_normal = ExtResource("3_kvfso")
stretch_mode = 0

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ComicButton" to="." method="_on_texture_button_pressed"]
